--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -42,6 +42,7 @@ block page
           +wikilink('mouse') Mouse
           +wikilink('tune') Tune settings
           +wikilink('calibrate') Calibrate
+          +wikilink('wireless') Wireless
           +wikilink('ctrl_app') Ctrl app
 
         h3 Common problems
