--- a/src/pug/blog/report_27.pug
+++ b/src/pug/blog/report_27.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #27
-  +news_header('28 February 2024', 'recap_year_2', '')
+  +news_header('28 February 2024', 'recap_year_2', 'report_28')
 
   h3 Alpakka 1.0 delay
   p The Alpakka 1.0 release was estimated for February 14th, but #[em we decided to delay it a bit], since the last iteration of Marmota core modules had problems that we won't be able to solve with updates / without breaking backwards compatibility.
