--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -26,28 +26,22 @@ block page
       p For other generic inquiries, send us a message to #[span.lima #[span.lima1]] #[i (Cannot be copied)]
 
     div.box
-      h2 Why not Kickstarter?
-      p The very first reason, because Kickstarter is a platform for "pre-ordering" products, but Input Labs does not make products.
-      p The other reason is a bit more philosophical, when someone "buys" something in Kickstarter, the company gets some money but they also get debt (with the backers), and debt is bad. We do not want to be in debt with anyone.
-      p On the contrary, with Patreon the relation between the creator and the patron is much more healthy, transparent, and direct. We do what we love to do, and you can support us if you love it too.
-
-    div.box
       h2 Do you sell controllers?
       p Short answer: No.
-      p Long answer: For now we are only offering some selected parts, which are more problematic for people to source or build. And even if we offer a bigger variety of DIY kits and parts later, we may never sell assembled controllers.
-      p For example, the Alpakka #[+a('alpakka/components') components] page outlines where you can buy components or DIY kits.
+      p Long answer: We are selling selected #[em components] and #[em DIY kits], and try to make as easy as possible for people to build their own DIY controllers, adapted to their needs.
+      p: i "We give you the recipe, but you cook the pizza".
+      p The Alpakka #[+a('alpakka/components') components] page outlines which components are required to build a controller and from where to source them.
 
     div.box
       h2 What does the logo mean?
       p The logo is a sinusoidal wave representing an analog signal, being captured by code brackets (digital), in the shape of an hexagon, because hexagons are the #[a.egg(target='_blank' href='https://www.youtube.com/watch?v=thOifuHs6eY') bestagons].
       p: del I'm not high, I promise.
-      p When you think blue, green, or red, you associate these with some specific videogame brands, right? We don't settle with a single color, because #[em.wrap our favorite color is your favorite color], also we like rainbows, and RGB LED unicorn puke in all its PC gamer glory.
+      p When you think blue, green, or red, you associate these with some specific videogame brands, right? We don't settle with a single color, because #[em.wrap our favorite color is your favorite color].
 
-    div.box
-      h2 Why these funny animal names?
-      p We named our 2 first devices Alpakka and Kapybara, these are actually spelt correctly in finnish language. That's our little tribute to Finland, a country that took us as their own fellows.
-      p We also found funny that gaming companies are sometimes calling their products with 90's style radical animal names, such as the #[i "Cobra"], #[i "Black Puma"], or #[i "Death Hornet"] #[i (not actual names)].
-      p Instead we go for the most huggable, weird, and cute animals; mocking corporation marketing. Please give us ideas for the next ones!
+    //- div.box
+    //-   h2 Patents
+    //-   p We explained about #[em Input Labs approach to patents] in a blog post: #[+a('/blog/patents') Patents, a necessary evil].
+    //-   p Patents granted:
 
     div.box
       h2 On the shoulders of giants
@@ -55,11 +49,18 @@ block page
       ul
         li #[+ax('https://www.kicad.org') KiCad]: An incredible tool for PCB design.
         li #[+ax('https://www.blender.org') Blender]: The acclaimed 3D app we're abusing as CAD.
-        li #[+ax('https://github.com/hathach/tinyusb') TinyUSB]: A cool simple library for USB communication.
+        li #[+ax('https://build123d.readthedocs.io') Build123d]: CAD with Python code.
+        li #[+ax('https://github.com/hathach/tinyusb') TinyUSB]: A simple library for USB communication.
         li #[+ax('https://www.raspberrypi.com') Raspberry]: You may have heard about these guys.
-        li #[+ax('https://github.com/prusa3d/PrusaSlicer') PrusaSlicer]: Another must-have for 3D printing.
         li #[+ax('https://github.com/pugjs/pug') Pug]: The HTML template library this web is made with.
         li #[+ax('https://plausible.io') Plausible]: Privacy-friendly web analytics.
+
+    div.box
+      h2 Why these funny animal names?
+      p We named our 2 first devices Alpakka and Kapybara, these are actually spelt correctly in finnish language. That's our little tribute to Finland, a country that took us as their own fellows.
+      p We also find funny when gaming companies call their products with 90's style rad animal names, such as the #[i "Cobra"], #[i "Black Puma"], or #[i "Death Hornet"] #[i (not actual names)].
+      p Instead we go for the most huggable, weird, and cute animals. Please give us ideas for the next ones!
+
 
     div.box
       h2 Privacy
