Kapybara development blog entry

--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -25,6 +25,7 @@ block page
 
         h3 News
         div
+          +wikilink('kapybara_development') Kapybara development
           +wikilink('report_28') Progress report 28
           +wikilink('report_27') Progress report 27
           +wikilink('recap_year_2') Year 2 recap
