--- a/src/pug/blog/report_28.pug
+++ b/src/pug/blog/report_28.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #28
-  +news_header('18 April 2025', 'report_27', '')
+  +news_header('18 April 2025', 'report_27', 'kapybara_development')
 
   h3 Alpakka 1.0 pre-orders being delivered
   p On 12th of March 2025 we started shipping for Alpakka 1.0 DIY kits. As of today #[em 75% of the pre-orders] has been fulfilled.
