Added form link

--- a/src/pug/blog/kapybara_development.pug
+++ b/src/pug/blog/kapybara_development.pug
@@ -158,7 +158,7 @@ block content
         li Having a pro-active attitude, and communicate often in Discord.
         li
         li NOT required: 3D printer nor DIY skills.
-        li #[+ax('/TODO') Apply to become a tester].
+        li #[+ax('https://forms.gle/8gW3dTAbmEJ84b2q6') Apply to become a tester].
 
   h4 Collaborator role
   ul
@@ -170,6 +170,7 @@ block content
         li Follow up with latest mockups and prototypes, build and test them.
         li Share feedback and ideas in Discord.
         li Maintain basic etiquette, avoid heated arguments, and respect the opinions of other testers.
+        li No need to sign up.
 
   hr
   h3 Development phases
