--- a/src/pug/blog/kapybara_development.pug
+++ b/src/pug/blog/kapybara_development.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Kapybara development
-  +news_header('8 May 2025', 'report_28', '')
+  +news_header('8 May 2025', 'report_28', 'report_29')
 
   h3 Kapybara development starts now
   p Kapybara (finnish spell for #[+ax('https://en.wikipedia.org/wiki/Capybara') Capybara]) is the name for Input Labs' second reference design, a #[em single hand] controller more focused on accessibility usecases. We had plans to make the Kapybara as early as 2022 when Input Labs was founded, but the development of the Alpakka (our first controller) forced us to delay its development until now.
@@ -160,7 +160,7 @@ block content
         li NOT required: 3D printer nor DIY skills.
         li #[+ax('https://forms.gle/8gW3dTAbmEJ84b2q6') Apply to become a tester].
 
-  h4 Collaborator role
+  h4 Self-supporting tester role
   ul
     li #[b Members:] Everyone is welcome.
     li #[b Hardware:] Self-sourced according to schematics.
