Added full LED reference, Simplified getting started page, Other tweaks

--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -45,14 +45,16 @@ block page
           +wikilink('wireless') Wireless
           +wikilink('ctrl_app') Ctrl app
 
-        h3 Common problems
+        h3 References
         div
-          +wikilink('problem_led') LED blinking
+          +wikilink('specs') Specs
+          +wikilink('led') LED reference
+          +wikilink('faq') Frequently Asked Questions
           //- +wikilink('problem_soldering') Soldering problems
           //- +wikilink('problem_fitting') Parts fitting
-          div.inactive Soldering problems #[i (soon)]
-          div.inactive Parts fitting #[i (soon)]
-          div.inactive Touch detection #[i (soon)]
+          //- div.inactive Soldering problems #[i (soon)]
+          //- div.inactive Parts fitting #[i (soon)]
+          //- div.inactive Touch detection #[i (soon)]
 
         h3 Profiles
         div
@@ -72,11 +74,6 @@ block page
           +wikilink('dev') Firmware development
           +wikilink('dev_unix') Setup in Linux
           +wikilink('dev_windows') Setup in Windows
-
-        h3 Other
-        div
-          +wikilink('faq') Frequently Asked Questions
-          +wikilink('specs') Specs
 
     div.box.entry
       block content
