--- a/src/pug/alpakka/manual/diy_pcb.pug
+++ b/src/pug/alpakka/manual/diy_pcb.pug
@@ -9,7 +9,8 @@ block content
 
   h3 PCB sources
   p The PCB schematics and layout are available at #[+ax('https://github.com/inputlabs/alpakka_pcb') Alpakka PCB] repository, along with the consolidated order files for the reference design.
-  p We recommend to use a PCB prototyping service such as #[+ax('https://jlcpcb.com') JLCPCB], which manufacture cheap PCBs in low quantities, with the option to solder a good assortment of SMD (Surface Mount Devices) onto the board. Though is possible to use any other service of your preference.
+  p Additionally, pre-built PCBs are available to buy on #[+ax('https://inputlabs.squarespace.com/diy/p/alpakka-pcb-v1') Input Labs shop].
+  p If you want to order a PCB from the bare schematics, we recommend using a PCB prototyping service such as #[+ax('https://jlcpcb.com') JLCPCB], which manufacture cheap PCBs in low quantities, with the option to solder a good assortment of SMD (Surface Mount Devices) onto the board. Though is possible to use any other service of your preference.
 
   hr
   h3 Order from a PCB prototyping company
