--- a/src/pug/alpakka/manual/profile_home.pug
+++ b/src/pug/alpakka/manual/profile_home.pug
@@ -9,6 +9,8 @@ block content
 
   p A special profile that is only active while holding the #[em Home #[+home]] button.
   p It gives access to special functions of the controller, such as: #[+a('profiles') changing the active profile], #[+a('tune') tuning options], alt-tabbing, keyboard function keys, and more.
+  p Holding the #[em Home #[+home]] button for 5 seconds (without using any shortcut nor gyro) puts the controller to sleep.
+
   img.wide.mt(src='/static/manual/profile_home.svg')
   hr
 
