--- a/src/pug/alpakka/manual/firmware.pug
+++ b/src/pug/alpakka/manual/firmware.pug
@@ -53,7 +53,7 @@ block content
   ol
     li Put the controller in Boolsel mode (#[em RPI-RP2] drive appears).
     li Copy #[em wireless_submodule.uf2] to RPI-RP2 drive.
-    li Wait until the wireless module is flashed and RPI-RP2 re-appears (#[em ~30 seconds]).
+    li Wait until the blinking LED stops, and RPI-RP2 re-appears (~30 seconds).
     li Copy #[em alpakka_marmota.uf2] to RPI-RP2 drive.
     li Controller turns on automatically (LEDs flashing).
 
@@ -61,7 +61,7 @@ block content
   ol
     li Put the Dongle in Boolsel mode (#[em RPI-RP2] drive appears).
     li Copy #[em wireless_submodule.uf2] to RPI-RP2 drive.
-    li Wait until the wireless module is flashed and RPI-RP2 re-appears (#[em ~30 seconds]).
+    li Wait until the blinking LED stops, and RPI-RP2 re-appears (~30 seconds).
     li Copy #[em dongle_marmota.uf2] to RPI-RP2 drive.
     li Dongle turns on automatically (LED is on).
 
@@ -69,7 +69,7 @@ block content
   h3 After the installation
   ul
     li Run the #[+a('calibrate') calibration] if necessary.
-    li Why the #[+a('problem_led') LEDs are blinking]?.
+    li Why the #[+a('led') LEDs are blinking]?.
 
   hr
   h3 Modify the firmware
