commented out according to votes

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -14,18 +14,18 @@ block content
 
     li #[+ax('https://www.youtube.com/watch?v=WEJ_AO--MCI') IPlayController] #[em (video)] World's Most Accurate Controller: Alpakka v1.0 Review
     ul
-      li: i "When you think about this controller, I want you to think about it not as a game-pad, but as a weapon of war, designed to inflict ass-hurt, on the other side of the internet connection."
+      //- li: i "When you think about this controller, I want you to think about it not as a game-pad, but as a weapon of war, designed to inflict ass-hurt, on the other side of the internet connection."
       li: i "It is so accurate, I consider it the first controller that can legitimately compete against mouse and keyboard players at a high-level, with no aim-assist."
       li: i "The different in averages is over precision aim was over 15% between the Alpakka and the Dualsense, which is the best commercially available gyro you can get today on a controller."
-      li: i "In comparison, the Dualsense, where you are going for precision shots, is going to feel a tiny bit floaty and vague. And any commercially available controller use beyond that, like the Nintendo Switch Pro, Nikon Revolution 5 Pro, or Fly Digi Vader, is going to feel even worse than that."
-      li: i "With this controller, with enough practice, you'll be able to do just as well, as with any mouse. It is that accurate and precise."
+      //- li: i "In comparison, the Dualsense, where you are going for precision shots, is going to feel a tiny bit floaty and vague. And any commercially available controller use beyond that, like the Nintendo Switch Pro, Nikon Revolution 5 Pro, or Fly Digi Vader, is going to feel even worse than that."
+      //- li: i "With this controller, with enough practice, you'll be able to do just as well, as with any mouse. It is that accurate and precise."
       li: i "The polygonal shape actually helps you grip the controller."
       li: i "There is no hair trigger that is as hair-triggery as that on the Alpakka. ... It's like clicking a mouse."
       li: i "With this controller you get the best gyro performance you can ask for on a controller. Nothing else that is commercially sold even holds a candle to this controller."
-      li: i "If you want to compete in a sweaty competitive shooter on PC, you gotta get the Alpakka."
-      li: i "The gyro performance is everything that is advertised, and then some."
-      li: i "It totally shredded the Dualsense in a 1 vs. 1 test."
-      li: i "The Alpakka controller: it is expensive, it's janky, but it is incredibly accurate. It is eerily accurate, weirdly accurate, and I love this controller."
+      //- li: i "If you want to compete in a sweaty competitive shooter on PC, you gotta get the Alpakka."
+      //- li: i "The gyro performance is everything that is advertised, and then some."
+      //- li: i "It totally shredded the Dualsense in a 1 vs. 1 test."
+      //- li: i "The Alpakka controller: it is expensive, it's janky, but it is incredibly accurate. It is eerily accurate, weirdly accurate, and I love this controller."
 
 
     li #[+ax('https://www.youtube.com/watch?v=O_omKnvfgKY') FlickStick Videos] #[em (video)] No right stick controller in 2025?! - Alpakka Controller (v0.97) Review
