--- a/src/pug/blog/report_29.pug
+++ b/src/pug/blog/report_29.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #29
-  +news_header('30 May 2025', 'kapybara_development', '')
+  +news_header('30 May 2025', 'kapybara_development', 'report_30')
 
   h3 Alpakka 1.0 fully released now
   p We are proud to announce #[em 100%] of the Alpakka 1.0 pre-orders have been fulfilled, and the shop #[em queue has been reduced to zero], meaning that we also delivered all the orders that came after the release (technically not pre-orders but still waiting on the same queue).
