--- a/src/pug/blog/reports_all.pug
+++ b/src/pug/blog/reports_all.pug
@@ -8,6 +8,7 @@ block content
   hr
 
   ul
+    li: +a('report_30') Progress report 30
     li: +a('report_29') Progress report 29
     li: +a('report_28') Progress report 28
     li: +a('report_27') Progress report 27
