Added pics to v1 wheel assembly manual page

--- a/src/pug/alpakka/manual/diy_assembly.pug
+++ b/src/pug/alpakka/manual/diy_assembly.pug
@@ -78,13 +78,16 @@ block content
   p Before assembly: Check that the core can be inserted in the wheel with reasonable force (without requiring tools) but stays on it firmly.
   ol
     li Insert the core (only the core) into the encoder.
-    li Align the wheel with the core and push into the encoder direction until the core is inserted.
+    li Align the wheel with the core.
+    li Push the wheel all the way to the left, until the core is fully inserted and flat.
     li Place the holder into into position (resting on the thumbstick side).
     li Move the wheel-core assembly to the right by pushing the core shaft from the other side of the encoder.
     li Check that the wheel rotates freely and it is correctly aligned / does not wobble.
-  img.hm.mt.mr(src='/static/manual/assembly_wheel_a_.jpg')
-  img.hm.mt.mr(src='/static/manual/assembly_wheel_b_.jpg')
-  img.hm.mt.mr(src='/static/manual/assembly_wheel_c_.jpg')
+  img.hm.mt.mr(src='/static/manual/assembly_v1_wheel_a.jpg')
+  img.hm.mt.mr(src='/static/manual/assembly_v1_wheel_b.jpg')
+  img.hm.mt.mr(src='/static/manual/assembly_v1_wheel_c.jpg')
+  img.hm.mt.mr(src='/static/manual/assembly_v1_wheel_d.jpg')
+  img.hm.mt.mr(src='/static/manual/assembly_v1_wheel_e.jpg')
   hr
 
   //- h3 Fit 8-directional hat cap
